Some additional fixes in look on mobile

--- a/app/styles/loading.scss
+++ b/app/styles/loading.scss
@@ -1,3 +1,3 @@
 .loading {
-  padding: 40px;
+  padding-top: 240px;
 }
