--- a/app/styles/repository.scss
+++ b/app/styles/repository.scss
@@ -35,7 +35,7 @@
 
         a {
           padding: 15px 15px;
-          display: block; 
+          display: block;
           min-height: inherit;
 
           div {
@@ -68,6 +68,28 @@
             right: 20px;
             .row-data {
               text-align: right;
+              .score-data-label {
+                color: rgba($black, 0.7);
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  .container {
+    .repository-view {
+      ul.user-items {
+        li.user-item {
+          a {
+            .user-score-data {
+              position: absolute;
+              top: 60px;
+              font-size: 14px;
+              right: 20px;
               .score-data-label {
                 color: rgba($black, 0.7);
               }
